Fix spacing

--- a/frontend/src/components/Cards.css
+++ b/frontend/src/components/Cards.css
@@ -216,11 +216,3 @@
     margin-bottom: 2rem;
   }
 }
-
-.trippel {
-  display: flex;
-}
-
-.DialogContent #date {
-  width: 500;
-}
